--- a/frontend/website_project/package.json
+++ b/frontend/website_project/package.json
@@ -1,6 +1,7 @@
 {
   "name": "website_project",
   "version": "0.1.0",
+  "proxy": "https://website-server-tc9l.onrender.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
